--- a/src/components/FrontPage/_frontPage.scss
+++ b/src/components/FrontPage/_frontPage.scss
@@ -10,6 +10,12 @@
     // background-color: #49108B;
     background: linear-gradient(45deg, #6e34af, #49108B);
 
+    span {
+        padding-top: 1rem;
+        color: white;
+        font-size: 42px;
+    }
+
     .title {
         padding-top: 200px;
     }
@@ -18,5 +24,16 @@
         margin-top: 120px;
         display: flex;
         gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .frontPage {        
+        span {
+            font-size: 28px;
+        }
+        .buttons {
+            flex-direction: column;
+        }
     }
 }
