--- a/src/components/MainTechnologies/_mainTechnologies.scss
+++ b/src/components/MainTechnologies/_mainTechnologies.scss
@@ -26,16 +26,40 @@
         list-style: none;
         gap: 2rem 0;
         padding: 0 550px;
-    }
 
-    ul li {
-        color: white;
-        width: 150px;
-        font-size: 32px;
-        text-align: center;
-    }
+        li {
+            color: white;
+            width: 150px;
+            font-size: 32px;
+            text-align: center;
 
-    ul li i {
-        font-size: 70px;
+            i {
+                font-size: 70px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .mainTechnologies {
+        padding: 0 2rem;
+        align-items: center;
+        .title {
+            font-size: 32px;
+    
+            .title-second {
+                margin-top: -36px;
+            }
+        }
+        ul {
+            padding: 0;
+            gap: 2rem 0;
+
+            li {
+                i {
+                    font-size: 48px;
+                }
+            }
+        }
     }
 }
