--- a/src/components/MainTechnologies/_mainTechnologies.scss
+++ b/src/components/MainTechnologies/_mainTechnologies.scss
@@ -17,15 +17,15 @@
     }
 
     ul {
+        align-self: center;
         margin-top: 5rem;
-        width: 100%;
+        max-width: 700px;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         align-items: center;
         list-style: none;
         gap: 2rem 0;
-        padding: 0 550px;
 
         li {
             color: white;
