--- a/src/components/Repositories/_repositories.scss
+++ b/src/components/Repositories/_repositories.scss
@@ -123,7 +123,7 @@
         gap: .25rem;
 
         .hover {
-            padding: 0 2rem;
+            padding: 0 1rem;
             background-color: rgba(15, 0, 35, 0.7);
 
             .hover__title {
@@ -133,6 +133,7 @@
             }
 
             ul {
+                padding-left: 1rem;
                 align-self: start;
                 display: block;
                 list-style: circle;
