--- a/src/components/Contact/_contact.scss
+++ b/src/components/Contact/_contact.scss
@@ -1,8 +1,9 @@
 @use "../Styles/mixins";
+@use "../Styles/themes";
 
 .contact {
     @include mixins.section;
-    background: linear-gradient(45deg, #6e34af, #49108B);
+    background: linear-gradient(45deg, var(--gradient-color), var(--gradient-color-2));
     padding: 0 5rem;
     display: flex;
     flex-direction: column;
