--- a/src/components/FrontPage/_frontPage.scss
+++ b/src/components/FrontPage/_frontPage.scss
@@ -1,4 +1,5 @@
 @use "../Styles/mixins";
+@use "../Styles/themes";
 
 .frontPage {
     @include mixins.section;
@@ -8,7 +9,7 @@
     // justify-content: space-evenly;
     align-items: center;
     // background-color: #49108B;
-    background: linear-gradient(45deg, #6e34af, #49108B);
+    background: linear-gradient(45deg, var(--gradient-color), var(--gradient-color-2));
 
     span {
         padding-top: 1rem;
