--- a/src/components/Repositories/_repositories.scss
+++ b/src/components/Repositories/_repositories.scss
@@ -1,4 +1,5 @@
 @use "../Styles/mixins";
+@use "../Styles/themes";
 
 .repositories {
     @include mixins.section;
@@ -41,11 +42,9 @@
     }
 
     .hover {
-        // padding: 0 5rem;
         width: 100%;
         height: 100%;
         background-color: rgba(15, 0, 35, 0.5);
-        /* backdrop-filter: blur(3px); */
         transition: .2s;
         display: flex;
         flex-direction: column;
@@ -56,11 +55,10 @@
         .hover__title {
             font-size: 32px;
             text-decoration: underline;
-            text-decoration-color: #FF0080;
+            text-decoration-color: var(--main-color);
         }
 
         ul {
-            // align-self: start;
             display: none;
             color: white;
             list-style: none;
@@ -74,7 +72,7 @@
 
         a {
             display: none;
-            background-color: #FF0080;
+            background-color: var(--main-color);
             padding: .5rem 1rem;
             border-radius: 5px;
             text-decoration: none;
@@ -82,7 +80,7 @@
         }
     
         a:hover {
-            background-color: #c00060;
+            background-color: var(--main-color-hover);
         }
     
         span {
@@ -129,7 +127,7 @@
             .hover__title {
                 font-size: 24px;
                 text-decoration: underline;
-                text-decoration-color: #FF0080;
+                text-decoration-color: var(--main-color);
             }
 
             ul {
