adicionando dark mode no projeto

--- a/src/components/AboutMe/_aboutMe.scss
+++ b/src/components/AboutMe/_aboutMe.scss
@@ -1,9 +1,11 @@
 @use "../Styles/mixins";
+@use "../Styles/themes";
 
 .aboutMe {
     @include mixins.section;
     padding: 0 5rem;
 
+    background-color: var(--bg-light);
     display: flex;
     flex-direction: column;
     align-items: start;
